--- a/templates/opcion1.html
+++ b/templates/opcion1.html
@@ -1,6 +1,8 @@
 			<div class="contenido_main">
 				<p>
-				Bienvenido al contenido 1! {ETIQUETA}
+				{CONTENIDO}
+				
+				
 				</p>
 				<p>
 				Contenido A....
