--- a/templates/opcion3.html
+++ b/templates/opcion3.html
@@ -1,6 +1,6 @@
 			<div class="contenido_main">
 				<p>
-				Bienvenido al contenido 3! {ETIQUETA}
+				{CONTENIDO}
 				</p>
 				<p>
 				Contenido E....
