--- a/templates/opcion3.html
+++ b/templates/opcion3.html
@@ -1,12 +1,15 @@
-			<div class="contenido_main">
-				<p>
-				{CONTENIDO}
-				</p>
-				<p>
-				Contenido E....
-				</p>
-				<p>
-				Contenido F...
-				</p>
-			</div>
+<div class="contenido_main">
+	<p>
+	{CONTENIDO}
+	
+	
+	</p>
+	<p>
+	Contenido A....
+	</p>
+	<p>
+	Contenido B...
+	</p>
+	{CONTENIDO_TEMPLATE_1}
+</div>
 
