--- a/css/ejemploAjaxStyle.css
+++ b/css/ejemploAjaxStyle.css
@@ -60,7 +60,7 @@ nav{
 	left: 115px;
 }
 
-/* Es el ul principal, configurado para que no muestre vi–etas y con las configuraciones para
+/* Es el ul principal, configurado para que no muestre viï¿½etas y con las configuraciones para
    alinear al centro */
 #menu{
 	list-style:none;
@@ -71,9 +71,9 @@ nav{
 	text-align:center;
 }
 
-/* Es cada opci—n principal del menu, los ordena horizontalmente con la propiedad float.
+/* Es cada opciï¿½n principal del menu, los ordena horizontalmente con la propiedad float.
    Al tener un ancho fijo, se alinea su contenido al centro y con position:relative; permite
-   que al pasar el cursor, aparezcan las opciones bajo cada opci—n principal
+   que al pasar el cursor, aparezcan las opciones bajo cada opciï¿½n principal
 */
 #menu li{
 	float:left;
@@ -83,7 +83,7 @@ nav{
 }
 
 
-/* Configuraci—n de como se veran los enlaces */
+/* Configuraciï¿½n de como se veran los enlaces */
 #menu a, #menu a:visited{
 	/*color:white;*/
 	text-decoration:none;
@@ -126,3 +126,5 @@ nav{
 	/*background: #ffffff;*/
 	overflow: auto;
 }
+
+
