--- a/templates/tabla.html
+++ b/templates/tabla.html
@@ -2,39 +2,29 @@
 		<table border = 1 width="100%">
 			<tr>
 				<th>
-					idUsuario
+					idEvento
 				</th> 
 				<th>
-					nombre
+					nombreEvento
 				</th> 
-				<th>
-					correo
+                <th>
+					totalAsistentes
 				</th> 
-				<th>
-					contraseña
-				</th> 
-				<th>
-					tipo
-				</th>
+				
 			</tr>
 				
 <!-- BEGIN USUARIO -->
 			<tr>
 				<td>
-					{ID_USUARIO}
+					{ID_EVENTO}
 				</td> 
 				<td>
-					{NOMBRE}
+					{NOMBRE_EVENTO}
 				</td>
-				<td>
-					{CORREO}
-				</td> 
-				<td>
-					{CONTRASENIA}
-				</td> 
-				<td>
-					{TIPO}
+                <td>
+					{TOTAL_ASISTENTES}
 				</td>
+				
 			</tr>
 <!-- END USUARIO -->
 
